Mma 5298 avslutt sak funksjonalitet (#708)
* MMA-5298: Avslutt sak:

* Add avsluttSak rest-controller
* Add avsluttSak requestvalidator + test
* Add avslutt-sak schema og swagger